--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,14 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <!-- 非必须权限, 用于 notification 振动 -->
     <uses-permission android:name="android.permission.VIBRATE" />
-    <!--添加网络权限：-->
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <!-- 添加网络权限： -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -51,6 +57,10 @@
         <meta-data
             android:name="TencentMapSDK"
             android:value="I2EBZ-KRZCW-NJCRV-O4YOY-EQ2I3-7ABJL" />
+
+        <activity
+            android:name=".TelActivity"
+            android:label="@string/title_activity_tel"></activity>
     </application>
 
 </manifest>
